--- a/src/components/about/Skills.astro
+++ b/src/components/about/Skills.astro
@@ -36,6 +36,7 @@
         margin: 1rem 0;
     }
 
+    /* the arrow in front of each list item */
     li::before {
         content: "→";
         margin-left: -1rem;
