--- a/src/layouts/MainPage.astro
+++ b/src/layouts/MainPage.astro
@@ -31,6 +31,7 @@ import { t } from "i18next";
 </Layout>
 
 <script>
+	// Parallax effect on the header text when scrolling
 	document.addEventListener('astro:page-load', () => {
 	  	gsap.to('.header-text', {
 			scrollTrigger: {
