--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -54,6 +54,7 @@ setDefaultNamespace("about");
             flex-direction: row;
         }
         #second-section {
+            /* on desktop, we want the second section to be reversed */
             flex-flow: row-reverse;
             margin-top: 5vh;
         }
