--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,6 +38,7 @@ projects.sort((a, b) => b.data.relevance - a.data.relevance);
 
 <style>
     .projects {
+        /* Display the projects in a grid layout */
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(min(30rem, 90vw), 1fr));
         justify-content: center;
