--- a/src/components/about/PersonnalityCard.astro
+++ b/src/components/about/PersonnalityCard.astro
@@ -2,6 +2,7 @@
 import { t } from "i18next";
 ---
 
+<!-- simple section with details about me -->
 <section>
     <div class="category">
         <h3>{t("personnality.title-1")}</h3>
