--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -113,6 +113,7 @@ setDefaultNamespace("process");
 
     @media screen and (min-width: 1100px){
         main {
+            /* On desktop, limit the width of the content */
             width: 60%;
         }
         h2 {
